# resume-generator

./: .env.example  AGENTS.md  CLAUDE.md  README.md  justfile  main.py  pyproject.toml  test_profile.json
.ignore/: my_profile.json
.zed/: debug.json
src/resume_generator/: cli.py  config.py  observability.py
src/resume_generator/agents/: base.py  cover_letter_generator.py  job_analyzer.py  job_search.py  profile_extractor.py  resume_generator.py  skills_matcher.py
src/resume_generator/models/: schemas.py
src/resume_generator/utils/: __init__.py  pdf_generator.py
src/resume_generator/workflows/: graph.py  state.py
