[project]
name = "resume-generator"
version = "0.1.0"
description = "AI-powered resume generator using LangChain and LangGraph"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.5",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-jobspy>=1.1.82",
]

[project.scripts]
resume-generator = "resume_generator.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]

